# cv-mid-term-test-2025

./: .gitignore  CMakeLists.txt  README.md  appunti-Francesco.md  appunti-Luca.md  appunti_Marco.md  detector
include/: enumobjtype.h  measurement.h  preprocessing.h  processing.h  structModelImage.h  structTestImage.h  structuserreturn.h  testimage.cpp  testimage.h
src/: main.cpp  measurement.cpp  preprocessing.cpp  preprocessing_main.cpp  processing.cpp
